--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "json:server": "json-server db.json --watch"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "json-server": "^0.16.1",
     "lodash": "^4.17.15",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
